<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/red6"
    tools:context=".view.FilmShowingFragment">


            <ImageView
                android:id="@+id/ivShowFilmPoster"
                android:layout_margin="15dp"
                android:src="@mipmap/ic_launcher_round"
                android:layout_width="250dp"
                android:layout_height="250dp"/>
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_margin="5dp"
               android:layout_height="40dp"
               android:orientation="horizontal">
               <TextView
                   android:id="@+id/tvShowFilmGenre"
                   android:layout_marginTop="10dp"
                   android:layout_marginLeft="10dp"
                   android:layout_marginRight="10dp"
                   android:text="@string/filmGenre"
                   android:textColor="@color/black"
                   android:textSize="20sp"
                   android:textStyle="bold"
                   android:layout_weight="1"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"/>

               <TextView
                   android:id="@+id/tvShowFilmImbd"
                   android:layout_marginTop="10dp"
                   android:layout_marginLeft="10dp"
                   android:layout_weight="1"
                   android:layout_marginRight="10dp"
                   android:gravity="right"
                   android:text="@string/filmImdb"
                   android:textColor="@color/black"
                   android:textSize="15sp"
                   android:textStyle="bold|italic"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"/>
           </LinearLayout>


            <TextView
                android:id="@+id/tvShowFilmDesc"
                android:layout_margin="15dp"
                android:text="@string/filmPlot"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/red4"
        android:backgroundTint="@color/red1"
        app:cardCornerRadius="5dp"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red6"
        android:layout_margin="3dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Actors:  "
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_margin="2dp"
            android:gravity="left"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/tvShowFilmActors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filmActors"
            android:textSize="16sp"
            android:gravity="left"
            android:layout_margin="2dp"
            android:textColor="@color/black"
            />
    </LinearLayout>
    </androidx.cardview.widget.CardView>

<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    app:cardCornerRadius="5dp"
    android:layout_margin="5dp"
    android:background="@color/red4"
    android:backgroundTint="@color/red1"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/red6"
        android:layout_margin="3dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Awards:  "
            android:textSize="16sp"
            android:layout_margin="2dp"
            android:textStyle="bold"
            android:gravity="left"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/tvShowFilmAwards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/filmAwards"
            android:textSize="16sp"
            android:gravity="left"
            android:textColor="@color/black"
            /></LinearLayout>
</androidx.cardview.widget.CardView>





</LinearLayout>
</layout>